[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UpdateNewEntry/UpdateNewEntry.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/random.png" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/fav_off.png" type="Texture" id=4]
[ext_resource path="res://StyleResources/Buttons_StyleBoxTexture.tres" type="StyleBox" id=5]

[node name="UpdateNewEntry" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -561.0
margin_bottom = -307.0
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 405.0
margin_bottom = 259.0
rect_min_size = Vector2( 405, 259 )

[node name="SiteContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 405.0
margin_bottom = 82.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="SiteEdit" type="LineEdit" parent="VBoxContainer/SiteContainer"]
margin_right = 357.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Website"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Favorite" type="Button" parent="VBoxContainer/SiteContainer"]
margin_left = 361.0
margin_right = 405.0
margin_bottom = 82.0
custom_styles/hover = ExtResource( 5 )
toggle_mode = true
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CredentialsContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 405.0
margin_bottom = 168.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PseudoEdit" type="LineEdit" parent="VBoxContainer/CredentialsContainer"]
margin_right = 176.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Username"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordEdit" type="LineEdit" parent="VBoxContainer/CredentialsContainer"]
margin_left = 180.0
margin_right = 357.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Password"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomPassword" type="Button" parent="VBoxContainer/CredentialsContainer"]
margin_left = 361.0
margin_right = 405.0
margin_bottom = 82.0
custom_styles/hover = ExtResource( 5 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernamePredictions" type="GridContainer" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 405.0
margin_bottom = 172.0
size_flags_horizontal = 5
size_flags_vertical = 5
columns = 3

[node name="Enregistrer" type="Button" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 405.0
margin_bottom = 259.0
size_flags_horizontal = 7
size_flags_vertical = 7
text = "Enregistrer"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="VBoxContainer/SiteContainer/SiteEdit" to="." method="_on_SiteEdit_text_changed"]
[connection signal="toggled" from="VBoxContainer/SiteContainer/Favorite" to="." method="_on_Favorite_toggled"]
[connection signal="text_changed" from="VBoxContainer/CredentialsContainer/PseudoEdit" to="." method="_on_PseudoEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/CredentialsContainer/PasswordEdit" to="." method="_on_PasswordEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/CredentialsContainer/RandomPassword" to="." method="_on_RandomPassword_pressed"]
[connection signal="pressed" from="VBoxContainer/Enregistrer" to="." method="_on_Enregistrer_pressed"]
